--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -34,6 +34,12 @@
   width: 80px;
 }
 
+.width-90px {
+  max-width: 90px;
+  min-width: 90px;
+  width: 90px;
+}
+
 .width-100px {
   max-width: 100px;
   min-width: 100px;
@@ -74,6 +80,18 @@
   max-width: 360px;
   min-width: 360px;
   width: 360px;
+}
+
+.width-400px {
+  max-width: 400px;
+  min-width: 400px;
+  width: 400px;
+}
+
+.width-500px {
+  max-width: 500px;
+  min-width: 500px;
+  width: 500px;
 }
 
 .width-5pct {
