--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -28,6 +28,12 @@
   width: 60px;
 }
 
+.width-70px {
+  max-width: 70px;
+  min-width: 70px;
+  width: 70px;
+}
+
 .width-80px {
   max-width: 80px;
   min-width: 80px;
