--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -28,10 +28,22 @@
   width: 60px;
 }
 
+.width-70px {
+  max-width: 70px;
+  min-width: 70px;
+  width: 70px;
+}
+
 .width-80px {
   max-width: 80px;
   min-width: 80px;
   width: 80px;
+}
+
+.width-90px {
+  max-width: 90px;
+  min-width: 90px;
+  width: 90px;
 }
 
 .width-100px {
@@ -74,6 +86,18 @@
   max-width: 360px;
   min-width: 360px;
   width: 360px;
+}
+
+.width-400px {
+  max-width: 400px;
+  min-width: 400px;
+  width: 400px;
+}
+
+.width-500px {
+  max-width: 500px;
+  min-width: 500px;
+  width: 500px;
 }
 
 .width-5pct {
@@ -226,4 +250,8 @@ $color-light: hsl(0, 0%, 96%);
 .document-description {
   line-height: 1rem;
   text-size-adjust: none;
+}
+
+.white-space-pre {
+  white-space: pre;
 }
