Add default dashboard
Signed-off-by: Aviv.Galmidi <AvivGalmidi@gmail.com>

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -136,6 +136,12 @@
   min-height: 50px;
 }
 
+.height-200px {
+  height: 200px;
+  max-height: 200px;
+  min-height: 200px;
+}
+
 /* Text */
 
 .ellipsis {
