--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -311,3 +311,7 @@ $color-light: hsl(0, 0%, 96%);
 .white-space-pre {
   white-space: pre;
 }
+
+.document-automatic-tags {
+  margin-bottom: 15px;
+}
