--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,23 +1,25 @@
-.color-red {
-  color: #ff3860;
-}
+/*
+Colors - Alphabetic order
+Names taken from this site: https://chir$ag/projects/name-that-color
+Names are the solid (exact) versions of these colors
+*/
 
-.color-orange {
-  color: #ff8b5c;
-}
+$color-boulder: #7a7a7a;
 
-.color-yellow {
-  color: #ffdd57;
-}
+$color-cerulean: #02a4d3;
 
-.color-green {
-  color: #48c774;
-}
+$color-emerald: #50c878;
 
-.color-blue {
-  color: #3273dc;
-}
+$color-mustard: #ffdb58;
 
-.color-gray {
-  color: #7a7a7a;
-}
+$color-plum: #843179;
+
+$color-pomegranate: #f34723;
+
+$color-radical-red: #ff355e;
+
+$color-royal-blue: #4169e1;
+
+$color-salmon: #ff8c69;
+
+$color-science-blue: #06c;
