Add full support for the default dashboard
Signed-off-by: Aviv.Galmidi <AvivGalmidi@gmail.com>

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -106,6 +106,12 @@ html {
   width: 250px;
 }
 
+.width-260px {
+  max-width: 260px;
+  min-width: 260px;
+  width: 260px;
+}
+
 .width-300px {
   max-width: 300px;
   min-width: 300px;
