edit trusted sources function
Signed-off-by: AylonS <aylons@reblaze.com>

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -172,6 +172,12 @@
   min-height: 130px;
 }
 
+.height-150px {
+  height: 150px;
+  max-height: 150px;
+  min-height: 150px;
+}
+
 /* Text */
 
 .ellipsis {
