fix PR comments
Signed-off-by: AylonS <aylons@reblaze.com>

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -172,6 +172,11 @@
   min-height: 130px;
 }
 
+.height-140px {
+  height: 140px;
+  max-height: 140px;
+  min-height: 140px;
+}
 /* Text */
 
 .ellipsis {
