add IDs for all lists, action to global filter and tags was already added

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -76,6 +76,12 @@ html {
   width: 120px;
 }
 
+.width-130px {
+  max-width: 130px;
+  min-width: 130px;
+  width: 130px;
+}
+
 .width-150px {
   max-width: 150px;
   min-width: 150px;
