--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -4,6 +4,10 @@ Names taken from this site: https://chir$ag/projects/name-that-color
 Names are the solid (exact) versions of these colors
 */
 
+$color-black: #000;
+
+$color-black-haze: #f6f7f7;
+
 $color-boulder: #7a7a7a;
 
 $color-cerulean: #02a4d3;
@@ -23,3 +27,5 @@ $color-royal-blue: #4169e1;
 $color-salmon: #ff8c69;
 
 $color-science-blue: #06c;
+
+$color-white: #fff;
