--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -172,6 +172,12 @@ html {
 
 /* Element height */
 
+.height-30px {
+  height: 30px;
+  max-height: 30px;
+  min-height: 30px;
+}
+
 .height-50px {
   height: 50px;
   max-height: 50px;
@@ -322,6 +328,10 @@ $color-light: hsl(0, 0%, 96%);
 
 .is-justify-content-space-around {
   justify-content: space-around;
+}
+
+.is-fullwidth {
+  width: 100%;
 }
 
 /* Vue3Datepicker */
