Web Proxy modifications (#87)
Add Advanced Settings to Config Template
Change Config Template accordion to start open
Change Server Group titles and inputs

Signed-off-by: AylonS <aylons@reblaze.com>

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -202,12 +202,18 @@ html {
   min-height: 130px;
 }
 
+
+.height-140px {
+  height: 140px;
+  max-height: 140px;
+  min-height: 140px;
+}
+
 .height-200px {
   height: 200px;
   max-height: 200px;
   min-height: 200px;
 }
-
 /* Text */
 
 .ellipsis {
