Bug fixes and page titles
Add page titles to all pages in the system
Fix bug in Security Policy where deleting map entry didn't save properly
Fix bug in Security Policy where default entries were editable and deletable
Fix bug in Flow Control where new Flow Control wrongly connected the two sections to the same entity instead of cloning it
Fix tooltip title for Security Policy connections table in Rate Limit editor - name of connected Security Policy
Fix bug in Edge Functions where we loaded referencing Routing Profiles from confserver instead of Reblaze backend
Fix bug in Global Filter where active box was disabled for Reblaze managed documents
Fix bug in Global Filter rule where creating a new section or entry did not open a collapsed rule
Fix bug in Mobile SDKs list preventing the creation of new Mobile SDKs
Fix unit tests import error

Signed-off-by: Aviv.Galmidi <AvivGalmidi@gmail.com>

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -200,6 +200,12 @@ html {
   min-height: 50px;
 }
 
+.height-60px {
+  height: 60px;
+  max-height: 60px;
+  min-height: 60px;
+}
+
 .height-80px {
   height: 80px;
   max-height: 80px;
