edge dynamic editor and list for route guard and premium
Signed-off-by: AylonS <aylons@reblaze.com>

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -312,6 +312,17 @@ html {
   }
 }
 
+.minute-suffix::after {
+  @extend .is-size-7;
+  content: 'minutes';
+}
+
+.minute-suffix {
+  input {
+    padding-right: 60px;
+  }
+}
+
 .mb-suffix::after {
   @extend .is-size-7;
   content: 'MB';
