--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -467,7 +467,7 @@ $color-light: hsl(0, 0%, 96%);
   min-width: 300px;
 }
 
-/* editor dropdown width */
+/* rbzTable Name width */
 .name-table {
   max-width: 300px;
 }
