--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -462,12 +462,7 @@ $color-light: hsl(0, 0%, 96%);
 }
 
 /* editor dropdown width */
-.docs-selection {
+.doc-selection-wrapper {
   max-width: 450px;
   min-width: 300px;
-}
-
-/* rbzTable Name width */
-.name-table {
-  max-width: 300px;
 }
