--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -70,6 +70,12 @@ html {
   width: 100px;
 }
 
+.width-110px {
+  max-width: 110px;
+  min-width: 110px;
+  width: 110px;
+}
+
 .width-120px {
   max-width: 120px;
   min-width: 120px;
