--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -88,6 +88,12 @@ html {
   width: 130px;
 }
 
+.width-140px {
+  max-width: 140px;
+  min-width: 140px;
+  width: 140px;
+}
+
 .width-150px {
   max-width: 150px;
   min-width: 150px;
