--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -12,9 +12,13 @@ $color-boulder: #7a7a7a;
 
 $color-cerulean: #02a4d3;
 
+$color-curious-blue: #2596d1;
+
 $color-emerald: #50c878;
 
 $color-mustard: #ffdb58;
+
+$color-nobel: #b7b1b1;
 
 $color-plum: #843179;
 
