--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,6 +1,7 @@
 /* Imports */
 /* Note: only import what is needed */
 
+@import 'colors';
 @import 'node_modules/bulma/sass/utilities/initial-variables.sass';
 @import 'node_modules/bulma/sass/utilities/functions.sass';
 @import 'node_modules/bulma/sass/utilities/derived-variables.sass';
@@ -16,6 +17,12 @@ html {
 
 /* Element width */
 
+.width-10px {
+  max-width: 10px;
+  min-width: 10px;
+  width: 10px;
+}
+
 .width-20px {
   max-width: 20px;
   min-width: 20px;
@@ -26,6 +33,12 @@ html {
   max-width: 30px;
   min-width: 30px;
   width: 30px;
+}
+
+.width-40px {
+  max-width: 40px;
+  min-width: 40px;
+  width: 40px;
 }
 
 .width-45px {
@@ -86,6 +99,12 @@ html {
   max-width: 150px;
   min-width: 150px;
   width: 150px;
+}
+
+.width-170px {
+  max-width: 170px;
+  min-width: 170px;
+  width: 170px;
 }
 
 .width-180px {
@@ -234,17 +253,28 @@ html {
   min-height: 130px;
 }
 
-
 .height-140px {
   height: 140px;
   max-height: 140px;
   min-height: 140px;
 }
 
+.height-150px {
+  height: 150px;
+  max-height: 150px;
+  min-height: 150px;
+}
+
 .height-200px {
   height: 200px;
   max-height: 200px;
   min-height: 200px;
+}
+
+.height-300px {
+  height: 300px;
+  max-height: 300px;
+  min-height: 300px;
 }
 /* Text */
 
@@ -379,6 +409,10 @@ $color-light: hsl(0, 0%, 96%);
   justify-content: space-around;
 }
 
+.is-justify-content-space-between {
+  justify-content: space-between;
+}
+
 .is-fullwidth {
   width: 100%;
 }
@@ -406,12 +440,8 @@ $color-light: hsl(0, 0%, 96%);
   justify-items: center;
 }
 
-.collapsible-card {
-  border: 1px solid #fff;
-}
-
 .collapsible-card:hover {
-  border: 1px solid #b5b5b5;
+  outline: 1px solid $color-nobel;
 }
 
 .card.collapsed .collapsible-content {
@@ -429,6 +459,17 @@ $color-light: hsl(0, 0%, 96%);
 .inline-collapsed-header {
   align-items: center;
   display: flex;
+}
+
+/* Shapes */
+.dot {
+  background-color: $color-curious-blue;
+  border-radius: 50%;
+  display: inline-block;
+  height: 0.5rem;
+  margin-left: -0.25rem;
+  margin-right: 0.25rem;
+  width: 0.5rem;
 }
 
 /* Other */
