--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -83,6 +83,12 @@ html {
   width: 100px;
 }
 
+.width-110px {
+  max-width: 110px;
+  min-width: 110px;
+  width: 110px;
+}
+
 .width-120px {
   max-width: 120px;
   min-width: 120px;
@@ -93,6 +99,12 @@ html {
   max-width: 130px;
   min-width: 130px;
   width: 130px;
+}
+
+.width-140px {
+  max-width: 140px;
+  min-width: 140px;
+  width: 140px;
 }
 
 .width-150px {
