--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,7 +1,6 @@
 /* Imports */
 /* Note: only import what is needed */
 
-@import 'colors';
 @import 'node_modules/bulma/sass/utilities/initial-variables.sass';
 @import 'node_modules/bulma/sass/utilities/functions.sass';
 @import 'node_modules/bulma/sass/utilities/derived-variables.sass';
@@ -17,12 +16,6 @@ html {
 
 /* Element width */
 
-.width-10px {
-  max-width: 10px;
-  min-width: 10px;
-  width: 10px;
-}
-
 .width-20px {
   max-width: 20px;
   min-width: 20px;
@@ -33,12 +26,6 @@ html {
   max-width: 30px;
   min-width: 30px;
   width: 30px;
-}
-
-.width-40px {
-  max-width: 40px;
-  min-width: 40px;
-  width: 40px;
 }
 
 .width-45px {
@@ -83,12 +70,6 @@ html {
   width: 100px;
 }
 
-.width-110px {
-  max-width: 110px;
-  min-width: 110px;
-  width: 110px;
-}
-
 .width-120px {
   max-width: 120px;
   min-width: 120px;
@@ -101,22 +82,10 @@ html {
   width: 130px;
 }
 
-.width-140px {
-  max-width: 140px;
-  min-width: 140px;
-  width: 140px;
-}
-
 .width-150px {
   max-width: 150px;
   min-width: 150px;
   width: 150px;
-}
-
-.width-170px {
-  max-width: 170px;
-  min-width: 170px;
-  width: 170px;
 }
 
 .width-180px {
@@ -225,10 +194,6 @@ html {
   min-height: 30px;
 }
 
-.min-height-40 {
-  min-height: 40px;
-}
-
 .height-50px {
   height: 50px;
   max-height: 50px;
@@ -265,28 +230,17 @@ html {
   min-height: 130px;
 }
 
+
 .height-140px {
   height: 140px;
   max-height: 140px;
   min-height: 140px;
 }
 
-.height-150px {
-  height: 150px;
-  max-height: 150px;
-  min-height: 150px;
-}
-
 .height-200px {
   height: 200px;
   max-height: 200px;
   min-height: 200px;
-}
-
-.height-300px {
-  height: 300px;
-  max-height: 300px;
-  min-height: 300px;
 }
 /* Text */
 
@@ -358,17 +312,6 @@ html {
   }
 }
 
-.minute-suffix::after {
-  @extend .is-size-7;
-  content: 'minutes';
-}
-
-.minute-suffix {
-  input {
-    padding-right: 60px;
-  }
-}
-
 .mb-suffix::after {
   @extend .is-size-7;
   content: 'MB';
@@ -421,13 +364,35 @@ $color-light: hsl(0, 0%, 96%);
   justify-content: space-around;
 }
 
-.is-justify-content-space-between {
-  justify-content: space-between;
-}
-
 .is-fullwidth {
   width: 100%;
 }
+
+/* Modal */
+.modal.is-active {
+  z-index: 102;
+}
+
+.modal-card {
+  border-radius: 6px;
+}
+
+.modal-card:not(.modal-content) {
+  top: 10%;
+}
+
+.modal .modal.is-large {
+  top: 2%;
+}
+
+.modal-footer-buttons {
+  justify-content: space-between;
+}
+
+.modal-card-foot.columns {
+  z-index: 2;
+}
+
 
 /* Vue3Datepicker */
 
@@ -452,8 +417,12 @@ $color-light: hsl(0, 0%, 96%);
   justify-items: center;
 }
 
+.collapsible-card {
+  border: 1px solid #fff;
+}
+
 .collapsible-card:hover {
-  outline: 1px solid $color-nobel;
+  border: 1px solid #b5b5b5;
 }
 
 .card.collapsed .collapsible-content {
@@ -471,17 +440,6 @@ $color-light: hsl(0, 0%, 96%);
 .inline-collapsed-header {
   align-items: center;
   display: flex;
-}
-
-/* Shapes */
-.dot {
-  background-color: $color-curious-blue;
-  border-radius: 50%;
-  display: inline-block;
-  height: 0.5rem;
-  margin-left: -0.25rem;
-  margin-right: 0.25rem;
-  width: 0.5rem;
 }
 
 /* Other */
@@ -512,10 +470,4 @@ $color-light: hsl(0, 0%, 96%);
 
 .white-space-pre {
   white-space: pre;
-}
-
-/* editor dropdown width */
-.doc-selection-wrapper {
-  max-width: 450px;
-  min-width: 300px;
 }
