--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -519,3 +519,11 @@ $color-light: hsl(0, 0%, 96%);
   max-width: 450px;
   min-width: 300px;
 }
+
+.vertical-align-middle {
+  vertical-align: middle;
+}
+
+.vertical-align-top {
+  vertical-align: top;
+}
