--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -59,6 +59,12 @@ html {
   width: 60px;
 }
 
+.width-65px {
+  max-width: 65px;
+  min-width: 65px;
+  width: 65px;
+}
+
 .width-70px {
   max-width: 70px;
   min-width: 70px;
@@ -419,10 +425,6 @@ $color-light: hsl(0, 0%, 96%);
 
 .is-justify-content-space-around {
   justify-content: space-around;
-}
-
-.is-justify-content-space-between {
-  justify-content: space-between;
 }
 
 .is-fullwidth {
