--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -1,6 +1,6 @@
 /*
 Colors - Alphabetic order
-Names taken from this site: https://chir$ag/projects/name-that-color
+Names taken from this site: https://chir.ag/projects/name-that-color
 Names are the solid (exact) versions of these colors
 */
 
