Events Log changes
Fix bug in RbzDatePicker where seconds were not reset
Fix bug in RbzDatePicker where selecting invalid time would invalidate the entire time picking
Change default branch to `prod` rather than first branch in the alphabet
Change `latency` box to `processing time`, now includes processing time, latency, and upstream response time in Events Log Details
Change upstream details to be a single line rather than collapsed card in Events Log details
Change order of boxes in Events Log details
Add group by tags, will now group by tag type. Grouping by clicking `geo-country:united-states` will group by different values of `geo-country`
Change grouped-by label and ungroup button design in Events Log
Change field name from `report` to `reported` in Dashboard aggregated data to reflect newest data structure
Change chart in Events Log to display 1/10th of seconds if all the requests displayed are in the same second
Change grouping of tags in Events Log details from legitimate/malicious/neutral to policies/rtc/geo/informative(other)
Add background color to selected and hovered requested in Events Log page

Signed-off-by: Aviv-Galmidi <AvivGalmidi@gmail.com>

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -4,6 +4,8 @@ Names taken from this site: https://chir.ag/projects/name-that-color
 Names are the solid (exact) versions of these colors
 */
 
+$color-alto: #dbdbdb;
+
 $color-black: #000;
 
 $color-black-haze: #f6f7f7;
