UI bug fixes (#161)
Change passed-reported-blocked and humans-bots bars to be horizontal in Events Log
Change chart in Events Log to be bigger
Fix issues with date/time formatting in RbzCharts
Change date format from "1st Dec 2022" to "2022-12-01"
Change title "Reblaze Threat Category" to "Reblaze Traffic Category"
Fix issue in DNS page not having correct row height
Fix issue in DNS page loop not refreshing data correctly on sort/filter
Fix issue with Generate Certificate button sending domains in the wrong format
Fix issue with Generate Certificate button sending URI params not encoded
Fix issue with Generate Certificate button not adding the new certificate to the certificates dropdown list
Fix issue in SSL page where delete button was enabled for certificates attached to Load Balancers

Signed-off-by: Aviv-Galmidi <AvivGalmidi@gmail.com>

* Remove unused css class

Signed-off-by: Aviv-Galmidi <AvivGalmidi@gmail.com>

* Fix unit tests

Signed-off-by: Aviv-Galmidi <AvivGalmidi@gmail.com>

Signed-off-by: Aviv-Galmidi <AvivGalmidi@gmail.com>
Co-authored-by: AvihayMReblaze <avihaym@reblaze.com>

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -137,6 +137,12 @@ html {
   width: 220px;
 }
 
+.width-230px {
+  max-width: 230px;
+  min-width: 230px;
+  width: 230px;
+}
+
 .width-250px {
   max-width: 250px;
   min-width: 250px;
@@ -281,6 +287,12 @@ html {
   height: 200px;
   max-height: 200px;
   min-height: 200px;
+}
+
+.height-250px {
+  height: 250px;
+  max-height: 250px;
+  min-height: 250px;
 }
 
 .height-300px {
@@ -429,6 +441,10 @@ $color-light: hsl(0, 0%, 96%);
   justify-content: space-around;
 }
 
+.is-justify-content-space-between {
+  justify-content: space-between;
+}
+
 .is-fullwidth {
   width: 100%;
 }
@@ -510,6 +526,13 @@ $color-light: hsl(0, 0%, 96%);
   height: 0.5rem;
   margin-left: -0.25rem;
   margin-right: 0.25rem;
+  width: 0.5rem;
+}
+
+.square {
+  background-color: $color-curious-blue;
+  display: inline-block;
+  height: 0.5rem;
   width: 0.5rem;
 }
 
