--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -14,6 +14,8 @@ $color-boulder: #7a7a7a;
 
 $color-cerulean: #02a4d3;
 
+$color-cinderella: #fde1dc;
+
 $color-curious-blue: #2596d1;
 
 $color-emerald: #50c878;
