--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -14,6 +14,8 @@ $color-boulder: #7a7a7a;
 
 $color-cerulean: #02a4d3;
 
+$color-cornflower-blue: #069;
+
 $color-cinderella: #fde1dc;
 
 $color-curious-blue: #2596d1;
@@ -37,3 +39,5 @@ $color-salmon: #ff8c69;
 $color-science-blue: #06c;
 
 $color-white: #fff;
+
+$color-wild-sand: #f4f4f4;
