--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -22,6 +22,8 @@ $color-curious-blue: #2596d1;
 
 $color-emerald: #50c878;
 
+$color-mercury: #e5e5e5;
+
 $color-mustard: #ffdb58;
 
 $color-nobel: #b7b1b1;
@@ -39,5 +41,7 @@ $color-salmon: #ff8c69;
 $color-science-blue: #06c;
 
 $color-white: #fff;
+
+$color-wild-sand: #f4f4f4;
 
 $color-wild-sand: #f4f4f4;
