add more things, should fix the size of the test in the html tag into main.scss

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -17,15 +17,15 @@
 /* System */
 
 html {
-  overflow: hidden;
   font-size: 10px;
+  overflow: hidden;
 }
 
 /* Header */
 
-.rbz-header {
+/* .rbz-header {
   font-family: 'Red Hat Display';
-}
+} */
 
 .rbz-header-h1 {
   font-weight: 700;
